src/test/ui/traits/trait-alias-fail1.stderr
error: type parameters on the left side of a trait alias cannot be bounded
  --> $DIR/trait-alias-fail1.rs:14:20
   |
LL | trait BoundedAlias<T: Clone = ()> = Default;
   |                    ^

error: type parameters on the left side of a trait alias cannot have defaults
  --> $DIR/trait-alias-fail1.rs:14:20
   |
LL | trait BoundedAlias<T: Clone = ()> = Default;
   |                    ^

error[E0404]: expected trait, found trait alias `CloneDefault`
  --> $DIR/trait-alias-fail1.rs:19:6
   |
LL | impl CloneDefault for () {}
   |      ^^^^^^^^^^^^ not a trait

error[E0658]: trait aliases are experimental (see issue #41517)
  --> $DIR/trait-alias-fail1.rs:13:1
   |
LL | trait CloneDefault<T> = Default where T: Clone;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(trait_alias)] to the crate attributes to enable

error[E0658]: trait aliases are experimental (see issue #41517)
  --> $DIR/trait-alias-fail1.rs:14:1
   |
LL | trait BoundedAlias<T: Clone = ()> = Default;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(trait_alias)] to the crate attributes to enable

error[E0658]: trait aliases are experimental (see issue #41517)
  --> $DIR/trait-alias-fail1.rs:17:1
   |
LL | trait B<T> = A<T>; // FIXME: parameter T should need a bound here, or semantics should be changed
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(trait_alias)] to the crate attributes to enable

error: aborting due to 6 previous errors

Some errors occurred: E0404, E0658.
For more information about an error, try `rustc --explain E0404`.
